# ChangeLog for app-admin/sysstat
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/sysstat/ChangeLog,v 1.292 2015/07/09 06:38:39 jer Exp $

*sysstat-11.1.5-r1 (09 Jul 2015)
*sysstat-11.0.5-r1 (09 Jul 2015)

  09 Jul 2015; Jeroen Roovers <jer@gentoo.org> -sysstat-11.0.4-r1.ebuild,
  -sysstat-11.0.5.ebuild, +sysstat-11.0.5-r1.ebuild, -sysstat-11.1.4-r1.ebuild,
  -sysstat-11.1.5.ebuild, +sysstat-11.1.5-r1.ebuild:
  Fix rc.d directory hack (bug #551732).

*sysstat-11.1.5 (14 Jun 2015)
*sysstat-11.0.5 (14 Jun 2015)

  14 Jun 2015; Jeroen Roovers <jer@gentoo.org> -sysstat-11.0.3.ebuild,
  +sysstat-11.0.5.ebuild, -sysstat-11.1.3.ebuild, +sysstat-11.1.5.ebuild:
  Version bump.

*sysstat-11.1.4-r1 (08 Jun 2015)
*sysstat-11.0.4-r1 (08 Jun 2015)

  08 Jun 2015; Jeroen Roovers <jer@gentoo.org> -sysstat-11.0.4.ebuild,
  +sysstat-11.0.4-r1.ebuild, -sysstat-11.1.4.ebuild, +sysstat-11.1.4-r1.ebuild,
  +files/sysstat-11.0.4-cron.patch:
  Always install cron file (bug #547846).

*sysstat-11.1.4 (14 Apr 2015)
*sysstat-11.0.4 (14 Apr 2015)

  14 Apr 2015; Jeroen Roovers <jer@gentoo.org> +sysstat-11.0.4.ebuild,
  +sysstat-11.1.4.ebuild:
  Version bump.

*sysstat-11.1.3 (16 Feb 2015)
*sysstat-11.0.3 (16 Feb 2015)

  16 Feb 2015; Jeroen Roovers <jer@gentoo.org> +sysstat-11.0.3.ebuild,
  -sysstat-11.1.2.ebuild, +sysstat-11.1.3.ebuild:
  Version bump.

  27 Dec 2014; Jeroen Roovers <jer@gentoo.org> -sysstat-11.1.1-r1.ebuild:
  Old.

  14 Dec 2014; Jeroen Roovers <jer@gentoo.org> -sysstat-10.2.0.ebuild,
  -sysstat-10.2.1-r1.ebuild, -sysstat-11.0.0.ebuild, -sysstat-11.0.1-r1.ebuild,
  -files/sysstat-10.2.0-systemd.patch:
  Old.

  05 Dec 2014; Agostino Sarubbo <ago@gentoo.org> sysstat-11.0.2.ebuild:
  Stable for x86, wrt bug #529920

  04 Dec 2014; Agostino Sarubbo <ago@gentoo.org> sysstat-11.0.2.ebuild:
  Stable for ppc64, wrt bug #529920

  03 Dec 2014; Agostino Sarubbo <ago@gentoo.org> sysstat-11.0.2.ebuild: