@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX sysstat-10.0.4-flags.patch 887 SHA256 198660c418902107914afefbed1b07a0206ee05d673e99182f834f4ed98d1e8c SHA512 7daf43a8b09af67781ae33cbaaf7d6da9bb1f6f750428a08c3ddde8ecb94e0de27d5746a332086eb5191cccd8e6dbc37c263ab3046294b4b3df1a2666c1ab6ee WHIRLPOOL 7629adddebfb4a1704348ad17f6151359d343ef4285139681b61bba261c2a26cccc49b59c9b75bd18d29a864877845c69e7f7d66c9a8700bd16b75b6c412e17f
 AUX sysstat-11.0.4-cron.patch 1609 SHA256 40be139a456adeb21e76fc1f9663c171750f5aab3af2a4c6ed255fbabb14f02c SHA512 531340bb0770c07743caa6c760584c0f4cda5a5db7dd46bd2eee8ae1cccabecffee084571fb68a3510735b04430f2bb454068d9983da2856a0459ccb258eb89d WHIRLPOOL 01b9f3aedac49494265891b03a885b59ead854099a6441f21a8aede873eba967b83c54df139f2be3215f489ddd0544c4c1d0241f5623985cdaf7082dbb912333
@@ -7,15 +7,27 @@ AUX sysstat.init.d 487 SHA256 2a68f48dd3e10fa62fcebc33ce5cf020b9ccd4a6bde4a21591
 DIST sysstat-11.0.2.tar.xz 291256 SHA256 acd87fdfbe7c796480f14fc26119d8f785d26827d74a0f5bced6c492a91f1b96 SHA512 4bb5f2ee14346d83c59bd4da36ae8fc6c13197eabb808b1b5db84b593f07d8b366b1f6329abed8d43e2a8497a89de0f89a398b741d4ca23b4a3a95973b5f0f54 WHIRLPOOL 98daee288e22f803f19bbe423eb999f527e8997f2ffd3fe1fe784363260365ee833dd33b755f44d6bfcc685f70b47cb8fd70fdd9a3fa679829c1e608bd65f8e2
 DIST sysstat-11.0.5.tar.xz 294020 SHA256 6b165d1664d192a897d0b53ae6db9b279048ed377ed23765d0d4a1b4d21386d6 SHA512 cac99950ffdf04eac18f4d0e9ac14ceac2d57938231dbdbfd1f980b7c656bee8991d96d560595034da874955dc06b207d8041f0a6414b8fd51ee79d859f0ed73 WHIRLPOOL 4debcc810c87663794292cf6c7ba89aa7ee1139019c7e81c69b5f6bd2ae0c195a848e0c87c4baf3182fdfefc40003aac607a022e689b765c3ea7b5d1731015bd
 DIST sysstat-11.1.5.tar.xz 312436 SHA256 feb3a90d86ffd69cf5b88144a8876ae05bd42384f559676f08100671589fa2bb SHA512 07d4570628cd565f2a7d8f6f3631d9581e5f0c6866af2d1ba56ac2f2484541701e12b6c736631611f2588ba81638ad0a9860d6c4f5edc43296dc7200fac87cca WHIRLPOOL bf3da3b2722267d5980a8ddede370542f149e47eaf70dcbd82f7f300b8e6428e566efdc6f76d9474af9404d885780818a9270d76c725b06a713e0930182a8d33
-EBUILD sysstat-11.0.2.ebuild 1934 SHA256 e2cb4b7d6101daca35e2df9023f07de5bc54c61ed6558a2a985c349675737a82 SHA512 c8f12431596cc3aef0c3051477a528dce796ac64dc79ce610fa2267101d61162b35de2ecd2b0291e7f007630375f9fe84994a83d8acb1e8c881bb368be60d9c9 WHIRLPOOL 878d636ec2b74093c1bf9593292f57fdb71716ba911f7fcffadd64a6f16221831023eadca0a6b76760c2e405fa90070ebd47bd8e4ab2aedaf28ee3f825eefc39
-EBUILD sysstat-11.0.5-r1.ebuild 2001 SHA256 5676fc3d69ddc6d8fdcc075dbc5bb3ffd7fea949db8271ad1166e021b1329deb SHA512 4cb1dfac7be6dcac1de8e8909298de3fe34d22e819d0358b48bb3ee3eb8ab4a065437e299a61b68511573999bde28450a4c9998120f6bfc6035eb312e8002960 WHIRLPOOL b57573181763825355957fd38eab986f0597833705194ffe1e41ee5f141c10f0837fc845343f1b34e146e119a805eb1b0b0e88607ed3446f4400e44e283d863a
-EBUILD sysstat-11.1.5-r1.ebuild 1924 SHA256 677a89e722b15eabbe081c796f608708748470dbdda075c9c4190ae7d309bb17 SHA512 ced8a273dd73f8089362f53cc1de5e479d4d91dad4923afc12e1a92bf53fa127d2739c9d777dcfb07df65a4acf07e40ce3b4bcc9e5b4d3448c1e6d551818a5ab WHIRLPOOL 379f3df5cc5a8b0ff9c88022eeb8a5b815b83e86b18d418b068e21ae40e74978a5abf2b747214331be4d034a3cbce2412c89b26f7504c8e30e527b0ffadd8f08
-MISC ChangeLog 37356 SHA256 730eb4cfce49494beba482915e1668ec25b3919f42f97eecbd9affa56aef4bfa SHA512 d699946f44c01a39aea7e9745f28ea2c34b5859cb0908870e3bfcec55b9e60165aa097caeecae9c02958fc29a2e9a5602120672145a149d9d8c1e208c5c37ac6 WHIRLPOOL c8692d8f5fb0d72f6cd9926b844cbce59c577a10ea1930462c3d0980801af72d9998114ca7cc780dba4e16987e5ed3fe3bb8a18f34269f41326dc017470cebff
-MISC metadata.xml 395 SHA256 90a23fcc0a01b4de0db48afe58aa046e2478075af5bf1b0d9b1c17f016bf945f SHA512 db36af13300611f0c11fb967217c0030f8f7c1100d16cd11566bc4b8d7e3a7bde27a3b037c8f63b60048f7310be1a41cb2deb9154a89dcfa106bda8848cfc6ab WHIRLPOOL a2df1837523416523f96cf52bbd2ef24f6756c6711c217ec6e3fca7daf7c8bca03260b5c9299d630a0cfa2d6491672c1f8e6927d903342b56d164fab0e8ad57a
+EBUILD sysstat-11.0.2.ebuild 1938 SHA256 9539b0a076004c8ab2d5b894915b91b09efae06b43f3ae811b045a18bb655df5 SHA512 d738eefe5b1be64562198a54ce1f48454ea98d754091ba2aebb0ded34f9e2ff3c763fc76501e24e05f9a700ade226c9206828159c33c7147fed457bf4c7dd1e8 WHIRLPOOL fcb853211411067d940937af7069cda3f8357bdbfa9d2b33781c7fa1a986c39c409bf68af751a0e817393edf5c116c3ed5755ff9d9fdd1ff8206e23986bb8d63
+EBUILD sysstat-11.0.5-r1.ebuild 2002 SHA256 ee0ec4bc27b49130bd2fad694bbbc630479e7999b039693ac05fea1f8f73fa19 SHA512 d43e921306181b1cd465601c7f3ccf691f75ee9bf6b44ff030ede2caeaf6b34f5286dd8dcb4a900a186195aac6242828186b4c4050dac4f9f98692d17d8ae7f6 WHIRLPOOL 537cb430b97fea62f792a6dd06447b7e1a41307b1e0838831b10c59edd562358c7ce5bc7a3676a685617f53c019b82f68ee5857a9994536030b5c86061f7ef5a
+EBUILD sysstat-11.1.5-r1.ebuild 1925 SHA256 69ee1c486a85c46f1a1fc120337222d75bfd47ad654a81f7ae780b145868978a SHA512 086859be15c7da080dc6e27b6786e09f105000165bd1378a8d09d95331699012ce60d30c96ded125b500c710882c17e72c58c0befde5c66f79493eb723174848 WHIRLPOOL aa4bf6d0e5b3bc9de5720286e85ce2ffa5463c4a935848da307a1b2f166b64067d6793ee77a6babb12147fb95bc482ce3f2f567a37f712f7d857df4708540a80
+MISC ChangeLog 37518 SHA256 f020b27cf6b458e9fce1b9cd3294ca030b9a5992df7801e12c23ea3e3e8adb22 SHA512 13251666a2fdd4cf4efb042e997c24d4fc9090c387d75b46ff4d6e29074d9f96a05353903f278319987800c8b130f54962ed49974f3ed68f554bac51543029bd WHIRLPOOL 94424ca038660ae939574de7ea313c6e2c05a26749dcad1d376489567256b272e671d099bdff2de90efd2604782e3060ec85521603eb0868887ec1071eacf05f
+MISC metadata.xml 407 SHA256 0a0e90387c87c47962afaa8a38bd4603b32bb2a6bee87bf98ea93bc1b4f320a1 SHA512 72ffd498624dac0ea77e9cf36cf716791dfba7e8bcf03bfdd875c704527af4b66860a2fe8cba07cdf0db6ff9b26eab502cb543caf137743575f67850ad742703 WHIRLPOOL 0c28ff58e5cf000dd08572a3a0b1d757ea7be4d02e4636fc9956ae3ed6e2301b19d2ec7f602992eff43b0cf58a770db8961a106f40a156f32c83d207dba1292b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.1
 
-iEYEAREIAAYFAlWeFvEACgkQVWmRsqeSphORvwCdFrNpNHhUry6yANTs1ROCUuUD
-d/QAn0DFLnWtM5M+r4Y/OAbKWlyKEJcn
-=TdPP
+iQJ8BAEBCgBmBQJVxKvnXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0QUU0N0I4NzFERUI0MTJFN0EyODE0NUFF
+OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmiL9sP/jRGXBxyRSrnkdr009B807Ej
+C5ZTHedsNB5qJOSJ8iOu9VO/1k7rYpZLz04U78XMn3iHMELq+pNJY8TKvXEum7oU
+y4brWaqfS8wqjNNZpGF7Z6mDS1OpuyirjSG09tBDfqlL50YacQhwaI8XS/+ZR+5R
+wXtFscqyjuFMhtmgOgeErASM0Na9CzOBa53AF3H7kmK6zzeYacB90tu+Dv9vjKiQ
+xMAV1u7feoqqXeSc7cS9szuOLk34LBG/cxU89B0WTDn0q2Ugb1TPTS3xc97LrXSf
+SOnrP2ER7vUxzBhpHeEv6u566cu3I/Z+qyRGjGzjfNJObRV4ZPO+X3Mtv67Y6/e6
+nqGOfzMrt9/5MwlPdCFT9bDZSquYKR/GjfRaEiEz6mwnQt2IZdfnZTyyIebNSr5A
+219u5B9mClMTc1wSFZME6hb+SOjlE2aVlycLZGxpsR5EXcUL9vOT6eLDgRQZvt7d
+xI/quQz7t/ZJ6KK5dkEA8fABo3kqbUhzzSLGIPHiwp/rfYPRtk3gDQRTLCVUMeD+
+r85NzkVVjG2TfORQcMX9I+zrmqL6MXIWV7NamSIx8eHwrsfJrst+r1QgfF71UKTW
+Cjzd4SL9etAzz5xgeYq1Pd/IwSShIytSCsjhisq9z24+yW0kxq3oy//NO2yyQ7kA
+3lHFQdKw0MqcgfP/+/ni
+=KQXy
 -----END PGP SIGNATURE-----
