@@ -1,4 +1,4 @@
-DEFINED_PHASES=compile configure install prepare unpack
+DEFINED_PHASES=compile configure install prepare
 DEPEND=dev-cpp/eigen:3 dev-cpp/muParser dev-qt/qtcore:4 dev-qt/qtopengl:4 media-libs/glew media-libs/qhull =media-libs/lib3ds-1* media-libs/openctm sci-libs/levmar sys-libs/libunwind sci-libs/mpir
 DESCRIPTION=A mesh processing system
 EAPI=5
@@ -8,5 +8,5 @@ LICENSE=GPL-2
 RDEPEND=dev-cpp/eigen:3 dev-cpp/muParser dev-qt/qtcore:4 dev-qt/qtopengl:4 media-libs/glew media-libs/qhull =media-libs/lib3ds-1* media-libs/openctm sci-libs/levmar sys-libs/libunwind sci-libs/mpir
 SLOT=0
 SRC_URI=mirror://sourceforge/project/meshlab/meshlab/MeshLab%20v1.3.3/MeshLabSrc_AllInc_v133.tgz
-_eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	62927b3db3a589b0806255f3a002d5d3	qmake-utils	4ce40e37ef0e28425a7159b0353be026	qt4-r2	7199e3db5b5908325487d379c6f67cf0	toolchain-funcs	42408102d713fbad60ca21349865edb4	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=7c4db8bc7a193583e85a14ba6859dd9c
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=6f49ea2ddec0447159119e8dad7cb9ec
