@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/meshlab
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/meshlab/ChangeLog,v 1.3 2015/07/25 19:30:40 amynka Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/meshlab/ChangeLog,v 1.4 2015/08/07 12:42:07 amynka Exp $
+
+  07 Aug 2015;  <amy@gentoo.org> meshlab-1.3.3.ebuild:
+  Change configure to qmake libcommon bug. Thanks uen.
 
 *meshlab-1.3.3 (25 Jul 2015)
 
